Refactored tests in test_break_it_up.py to use pytest instead of unittest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "partitura",
     "setuptools",  # required for partitura
     "music21",
+    "pytest",
 ]
 
 [project.optional-dependencies]
