--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -37,3 +37,6 @@ dev = [
 
 [project.urls]
 "Homepage" = "https://github.com/music-computing/toolkit"  # Update with your repo URL
+
+[tool.setuptools]
+packages = ["musmart"]
