--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[test]
+        pip install pytest-cov
         
-    - name: Run tests
+    - name: Run tests with coverage
       run: |
-        pytest tests/
+        pytest tests/ --cov=musmart --cov-report=xml
+        
+    - name: Upload coverage to Codecov
+      if: matrix.python-version == '3.11'  # Only upload coverage from one Python version
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
