--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dev = [
     "sphinx",
     "sphinx-book-theme",
     "sphinx-autodoc-typehints",
-    "myst-parser"
+    "myst-parser",
+    "pytest-cov",
 ]
 test = [
     "pytest>=7.0.0",
