--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,12 +29,11 @@ jobs:
         
     - name: Run tests with coverage
       run: |
-        pytest tests/ --cov=musmart --cov-report=xml
+        pytest --cov=./ --cov-report=xml
         
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.11'  # Only upload coverage from one Python version
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v5
       with:
-        file: ./coverage.xml
         token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: true
