--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "musmart"
+name = "amads"
 version = "0.1.0"
 description = "A toolkit for symbolic music analysis"
 readme = "README.md"
@@ -45,4 +45,4 @@ test = [
 "Homepage" = "https://github.com/music-computing/toolkit"  # Update with your repo URL
 
 [tool.setuptools]
-packages = ["musmart"]
+packages = ["amads"]
