--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dev = [
     "sphinx-book-theme",
     "sphinx-autodoc-typehints",
     "myst-parser",
+    "pre-commit",
     "pytest-cov",
 ]
 test = [
