--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,22 +15,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-        
+
+    - name: Run pre-commit checks
+      run: |
+        pip install pre-commit
+        pre-commit run --all-files || (cat .github/pre-commit-error-message.txt && exit 1)
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e .[test]
         pip install pytest-cov
-        
+
     - name: Run tests with coverage
       run: |
         pytest --cov=./ --cov-report=xml
-        
+
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.11'  # Only upload coverage from one Python version
       uses: codecov/codecov-action@v5
