--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
-addopts = --doctest-modules
+addopts = --doctest-modules --doctest-continue-on-failure
+doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER
 testpaths = tests amads
