--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "amads"
-version = "0.1.0"
+version = "0.1.0dev0"
 description = "A toolkit for symbolic music analysis"
 readme = "README.md"
-authors = [
-    { name = "The AMADS team", email = "email@example.com" }
+maintainers = [
+    { name = "Peter Harrison", email = "pmch2@cam.ac.uk"},
+    { name = "Roger Dannenberg},
+    { name = "Mark Gotham"}
 ]
-license = { text = "TODO" }  # Update with your actual license
+license = MIT
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -48,7 +50,8 @@ melsim = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/music-computing/toolkit"  # Update with your repo URL
+"GitHub" = "https://github.com/music-computing/amads"  # Update with your repo URL
+"Documentation website" = "https://music-computing.github.io/amads/"
 
 [tool.setuptools]
 packages = ["amads"]
