Try new CI config (#89)

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,7 +5,10 @@ env:
   GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
 on:
-  push
+  push:
+    branches:
+      - main
+  pull_request:
 
 permissions:
   contents: write
